# app_stt_aio

./: .gitignore  pyproject.toml
.github/workflows/: build.yml  release.yml
app/: main.py  packaged_smoke.py
app/config/: __init__.py  config.py  migration.py  paths.py  schema.py
app/hotkey/: __init__.py  backend.py  backend_win.py  binding.py  conflict.py  debounce.py  errors.py  hotkey_manager.py  types.py
app/llm/: __init__.py  session.py
app/services/: __init__.py  batch_dictation.py  dictation_runtime.py  recording_triggers.py  remote_gateway_service.py
app/session/: __init__.py  errors.py  injection_bridge.py  orchestration.py  queue_policy.py  session_manager.py  types.py
app/stt/: __init__.py  session.py
app/ui/: __init__.py  app_shell.py  controller.py  overlay.py  qr_util.py  qt_dispatcher.py  session_actions.py  state_view.py  tray.py  update_check.py  update_check_logic.py  waveform.py  waveform_buffer.py
core/: __init__.py  paths.py  runtime.py  version.py
core/audio/: __init__.py  audio_capture.py  capture_batch.py  device.py  errors.py  format.py  level.py  resample.py  settings.py  stream_capture.py  vad.py  webm_convert.py
core/diagnostics/: __init__.py  context.py  diagnostics.py  errors.py  logging_setup.py  masking_filter.py  masking_hook.py  telemetry.py
core/export/: __init__.py  (+9 more)
docs/: known_issues.md  manual_release_runbook.md  p4_mobile_e2e.md  qa_checklist.md  release_checklist.md  release_guide.md  update_policy.md
remote/: __init__.py
tests/: test_main.py  test_main_version.py  test_packaged_smoke.py  test_paths.py
(+330 files in other folders)
