[project]
name = "stt-aio"
version = "0.1.0"
description = "Local-first AI voice dictation and document pipeline for Windows"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
export = ["python-docx>=1.1.0"]
stt = ["faster-whisper>=1.0.0", "huggingface_hub>=0.20.0"]
ui = ["PySide6>=6.6", "qrcode>=7.4", "pillow>=10.0"]
remote = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
vad = ["torch>=2.0"]
build = ["pyinstaller>=6.0"]
dev = ["pytest>=8.0", "python-docx>=1.1.0", "httpx>=0.27", "fastapi>=0.110", "python-multipart>=0.0.9", "psutil>=5.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live environment tests (STT, hardware, network)",
]

[project.scripts]
stt-aio = "app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "core*", "remote*"]
exclude = ["devplans*", "tests*", "build*"]
